Changelog
=========

1.1.7 (unreleased)
------------------


1.1.6 (October 7, 2008)
-----------------------

- Fix on factories menu, showing constrain options only when there are 
  types to constrain. This closes http://dev.plone.org/plone/ticket/8213.
  [igbun]

- Fix non XML syntax compliant ids in contentmenus. This closes
  http://dev.plone.org/plone/ticket/8195
  [garbas,calvinhp]


1.1.5 (August 18th, 2008)
------------------

- Add a span with a "noMenuAction" class around disable menus, allowing them
  to be styled.
  [wichert]


1.1.3
-----

- Adjusted tests to reflect new behavior introduced by the last change.
  [hannosch]

- Do not show the display menu if it is disabled (i.e. there is an index_html
  item in the folder). The previous behavior was confusing for users: the
  description with the hint to remove the index_html object was never shown
  and users only got a unusable menu item. The new behavior makes the display
  menu consistent with other parts of the Plone UI.
  [wichert]

- Add an actionMenuSelected class to selected menu items so they can be
  styled (same class as used in Plone 2.5). Do not remove the <span>
  tag around the &bull; for selected items so it can be removed when
  proper CSS styling is used.
  [wichert]


1.0.7
-----

- Correct the content menu html: the icons in menus should have an
  empty alt-attribute since the alternative text if no image can
  be seen is the label of the menu item itself. Move the description
  to the title attribute so it still shows up as tooltip. 
  [wichert]

- Fixed an issue with non ISelectableBrowserDefault aware content.
  This closes http://dev.plone.org/plone/ticket/7226.
  [deo]

1.0.6
-----

- Fixed display menu to show the default page title correctly when the
  default-page is not a contained content item with DC metadata fields.
  Thanks to George Lee for finding this.
  [optilude]

1.0.5
-----

- Fixed display menu to show the default page title when not currently